--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -96,4 +96,13 @@ $v-panel-border: 2px solid v-shade;
 	.v-slot-pagedtable{
 		padding: 10px;
 	}
+	
+	.v-table-header {
+		background-color: white;
+		font-weight: bold;
+	}
+	
+	.v-table-row-odd {
+		background-color: white;
+	}
 }
