workouts list selection handle

--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -92,9 +92,10 @@ $v-panel-border: 2px solid v-shade;
   		margin: auto;
   		width: 80%;
   }
+
 	
 	.v-slot-pagedtable{
-		padding: 10px;
+		padding: 0 px 10px 10px 10px;
 	}
 	
 	.v-table-header {
