--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -27,9 +27,9 @@
 // For more information, see: https://vaadin.com/book/-/page/themes.valo.html
 // Example variants can be copy/pasted from https://vaadin.com/wiki/-/wiki/Main/Valo+Examples
 $v-app-loading-text: "Loading";
-$v-font-family: "Source Sans Pro", sans-serif;
+$v-font-family: "ApercuRegular",Helvetica,Helvetica Neue,Arial,sans-serif;
 $v-app-background-color: #fff;
-$v-background-color: #eee;
+// $v-background-color: #eee;
 $v-focus-color: #0072C6;
 $v-focus-style: 0 0 0 1px $v-focus-color;
 $valo-menu-background-color: darken($v-focus-color, 10%);
@@ -69,15 +69,13 @@ $v-panel-border: 2px solid v-shade;
   }
   
   .v-slot-menu-bar {
-	height: 37px !important;
-	border-bottom-style: solid !important;
-	border-bottom-width: 1px !important;
-	border-bottom-color: #0072c6 !important;
+	height: 100px !important;
   }
   
   .menu-bar {
   	width: 80% !important;
   	margin-left: 10%;
+ 
   }
   
    .v-panel {
@@ -86,11 +84,20 @@ $v-panel-border: 2px solid v-shade;
   
   .menu-item {
        background: none;
+       text-align: center;
+		width: 100%;
+		text-transform: uppercase;
+		font-weight: bold;
+		padding-top: 30px // hack
+  }
+  
+  .v-slot-menu-item {
+         width: 33.3%;
   }
   
   .v-slot-content {
-  		margin: auto;
-  		width: 80%;
+  //		margin: auto;
+  //		width: 80%;
   }
 
 	
@@ -98,12 +105,72 @@ $v-panel-border: 2px solid v-shade;
 		padding: 0 px 10px 10px 10px;
 	}
 	
+	.v-table, .v-table-header-wrap, .v-table-table, .v-table-row, .v-table-row-odd {
+		background: none;
+	}
+	
 	.v-table-header {
-		background-color: white;
+//		background-color: white;
 		font-weight: bold;
 	}
 	
 	.v-table-row-odd {
-		background-color: white;
+//		background-color: white;
+	}
+	
+	.places-stripe {
+		
+	}
+	
+	.places-stripe-loader .v-table {
+		color: white
+	}
+	
+	.stripe-half {
+		background: none;
+		padding: 5% !important;
+	}
+	
+	.places-stripe-map {
+		border-color: white;
+		border-style: solid;
+		border-width: 3px;
+	}
+	
+	.v-lazyloadingwrapper {
+		width: 100%;
+	}
+	
+	.v-lazyloadingwrapper-loading {
+		background-image: url("/VAADIN/themes/valo/shared/img/spinner.gif")
+	}
+	
+	.places-stripe-loader {
+		min-height: 600px;
+		background-color: rgb(41, 171, 164);
+		color: white
+	}
+	
+	.places-stripe-loader .v-button-link {
+		color: white
+	}
+	
+	.places-stripe-loader h1 {
+		color :white
+	}
+	
+	.places-stripe-loader .v-label {
+		color: white
+	}
+	
+	.places-stripe-workouts {
+		background: none;
+		padding-left: 5%;
+		padding-right: 5%;
+	}
+	
+	.places-stripe-workouts .v-button {
+		background: none;
+		color: white
 	}
 }
