avatar image in menu bar

--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -202,4 +202,11 @@ $v-panel-border: 2px solid v-shade;
 		background-color: rgb(221,95,50);
 		color: white
 	}
+	
+	.avatar-img {
+		width: 80px;
+		height: 80px;
+		margin-top: 10px;
+		opacity: 0.8
+	}
 }
