--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -112,17 +112,6 @@ $v-panel-border: 2px solid v-shade;
 	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.05)
 }
 
-.stripe-half {
-	background: none;
-	padding: 5% !important;
-}
-
-.places-stripe-map {
-	border-color: white;
-	border-style: solid;
-	border-width: 3px;
-}
-
 .v-lazyloadingwrapper {
 	width: 100%;
 }
@@ -192,6 +181,43 @@ $v-panel-border: 2px solid v-shade;
 
 .footer-copyright {
 	margin-top: 10px;
+	text-align: center;
+	padding: 5px;
+	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.05)
+}
+
+.places-view {
+	background-color: rgb(146,176,106);
+}
+
+.places-view .h1 {
+	margin-bottom: 0px;
+	color: white;
+}
+
+.places-view .v-button {
+	color: white;
+	padding-left: 0px;
+}
+
+.places-view-map {
+	min-height: 600px;
+}
+
+.places-view-map-half {
+	padding: 5% !important;
+}
+
+.places-view-map-half-map {
+	border-color: white;
+	border-style: solid;
+	border-width: 3px;
+}
+
+.places-view-map-half-text {
+	text-align: center;
+}
+.places-view-map-half-text .h1 {
 	text-align: center;
 }
 }
