workouts table on map view

--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -195,7 +195,7 @@ $v-panel-border: 2px solid v-shade;
 	color: white;
 }
 
-.places-view .v-button {
+.places-view-map .link {
 	color: white;
 	padding-left: 0px;
 }
