--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -226,4 +226,8 @@ $v-panel-border: 2px solid v-shade;
     background-repeat: no-repeat;
     background-position: center center;
 }
+
+.places-view-chart .v-expand .v-slot{
+	text-align: center;
+}
 }
