text in places chart stripe

--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -221,6 +221,11 @@ $v-panel-border: 2px solid v-shade;
 	text-align: center;
 }
 
+.places-view .h2 {
+	color: white;
+	text-align: center;
+}
+
 .v-table-empty .v-table-body {
     background-image: url('/VAADIN/themes/mytheme/img/no-results.png');
     background-repeat: no-repeat;
