details bar content

--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -114,6 +114,7 @@ $v-panel-border: 2px solid v-shade;
 
 .v-lazyloadingwrapper {
 	width: 100%;
+	height: 100%;
 }
 
 .v-lazyloadingwrapper-loading { 
