street view photo slide view

--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -236,4 +236,11 @@ $v-panel-border: 2px solid v-shade;
 .places-view-chart .v-expand .v-slot{
 	text-align: center;
 }
+
+.details-button {
+	width: 100%;
+	height: 50px;
+	text-align: left;
+}
+
 }
