--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -142,7 +142,7 @@ $v-panel-border: 2px solid v-shade;
 
 }
 
-.stats-view-workouts .v-button {
+.stats-view-workouts .v-table .v-button {
 	background: none; // background of view button in table row
 }
 
