--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -28,7 +28,7 @@
 // Example variants can be copy/pasted from https://vaadin.com/wiki/-/wiki/Main/Valo+Examples
 $v-app-loading-text: "Loading";
 $v-font-family: "ApercuRegular",Helvetica,Helvetica Neue,Arial,sans-serif;
-$v-app-background-color: #fff;
+// $v-app-background-color: #fff;
 // $v-background-color: #eee;
 $v-focus-color: #0072C6;
 $v-focus-style: 0 0 0 1px $v-focus-color;
@@ -122,8 +122,28 @@ $v-panel-border: 2px solid v-shade;
 	border: none;
 }
 
+.app-view {
+	background-attachment: fixed;
+	background-size: cover;
+}
+
 .stats-view {
+	@extend .app-view;
+	background-image: url("http://cdn.picography.co/Rainbow-Run-2014-018.jpg");
+}
+
+.places-view {
+	@extend .app-view;
+	background-image: url("http://cdn.picography.co/summer-bikes.jpg");
+}
+
+.stats-view-stripe {
+	@extend .color-stripe;
 	background-color: rgb(221,95,50);
+}
+
+.stats-view-text {
+	@extend .stats-view-stripe;
 }
 
 .v-slot-stats-view-workouts {
@@ -168,6 +188,10 @@ $v-panel-border: 2px solid v-shade;
 	margin: 0;
 }
 
+.stats-view-chart {
+	@extend .stats-view-stripe;
+}
+
 .stats-view-chart .v-expand .v-slot{
 	text-align: center
 }
@@ -187,7 +211,12 @@ $v-panel-border: 2px solid v-shade;
 	background: none repeat scroll 0 0 rgba(0, 0, 0, 0.05)
 }
 
-.places-view {
+.color-stripe {
+	opacity: 0.95;
+}
+
+.places-view-stripe {
+	@extend .color-stripe;
 	background-color: rgb(146,176,106);
 }
 
@@ -202,6 +231,7 @@ $v-panel-border: 2px solid v-shade;
 }
 
 .places-view-map {
+	@extend .places-view-stripe;
 	min-height: 600px;
 }
 
@@ -231,6 +261,10 @@ $v-panel-border: 2px solid v-shade;
     background-image: url('/VAADIN/themes/mytheme/img/no-results.png');
     background-repeat: no-repeat;
     background-position: center center;
+}
+
+.places-view-chart {
+	@extend .places-view-stripe;
 }
 
 .places-view-chart .v-expand .v-slot{
