login view as form

--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -63,6 +63,10 @@ $v-panel-border: 2px solid v-shade;
 	margin-top: 200px;
 }
 
+#loginForm {
+	width: 100%;
+}
+
 .login-button {
 	background: none repeat scroll 0 0 border-box #0072c6;
 	color: #e7f1f8;
