background fixed to white

--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -28,7 +28,7 @@
 // Example variants can be copy/pasted from https://vaadin.com/wiki/-/wiki/Main/Valo+Examples
 $v-app-loading-text: "Loading";
 $v-font-family: "ApercuRegular",Helvetica,Helvetica Neue,Arial,sans-serif;
-// $v-app-background-color: #fff;
+$v-app-background-color: white;
 // $v-background-color: #eee;
 $v-focus-color: #0072C6;
 $v-focus-style: 0 0 0 1px $v-focus-color;
