--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -84,12 +84,13 @@ $v-panel-border: 2px solid v-shade;
 }
 
 .v-slot-menu-bar {
-	height: 100px !important;
+	height: 60px !important;
 }
 
 .menu-bar {
 	width: 1100px !important;
-	margin-left: 10%;
+	display: block;
+	margin: auto;
 }
 
 .v-slot-menu-bar-not-logged {
@@ -108,18 +109,25 @@ $v-panel-border: 2px solid v-shade;
 .menu-item {
 	background: none;
 	text-align: center;
-	width: 200px;
+	/* width: 200px; */
 	text-transform: uppercase;
-	font-weight: bold;
-	height: 100px;
+	/* font-weight: bold; */
+	height: 40px;
+	margin-top: 10px;
+	margin-left: 50px;
+}
+
+.main-item-border {
+	border: 1px solid #ffffff;
+	border-radius: 3px;
 }
 
 .v-slot-menu-item-right {
 	float: right
 }
 
-.v-slot-menu-item {
-	width: 200px;
+.logo {
+	margin-top: 10px;
 }
 
 .v-slot-pagedtable {
@@ -442,6 +450,11 @@ $v-panel-border: 2px solid v-shade;
 	text-align: center;
 	padding-top: 20px !important;
 	padding-bottom: 20px !important
+}
+
+.main-view .v-horizontallayout .v-expand {
+	width: 1100px;
+	margin: auto;
 }
 
 }
