green login button on main page

--- a/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
+++ b/src/main/resources/VAADIN/themes/mytheme/mytheme.scss
@@ -406,7 +406,7 @@ $v-panel-border: 2px solid v-shade;
 }
 
 .main-view-login .login-button {
-	background-color: #19486a;
+	background-color: #87aa14;
 	color: white;
 	height: 50px;
 	width: 250px;
